# svd2pac

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  deny.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request---question.md
.github/workflows/: blackducksca-workflow.yml  check-and-lint.yaml  test.yaml
src/: lib.rs  main.rs  rust_gen.rs  svd_util.rs
src/rust_gen/: ir.rs  util.rs  xml2ir.rs
src/rust_gen/xml2ir/: svd2temp.rs
templates/rust/: Cargo_toml.tera  aurix_core.tera  common.tera  device_x.tera  lib.tera  macros.tera  peri_mod.tera  reg_name.tera  tracing.tera
test_svd/: simple.xml  simple_csfr.svd  svd.xsd
tests/: test_basic_svd_aurix.rs  test_basic_svd_cortex_m.rs  test_basic_svd_generic.rs  test_basic_svd_tracing.rs
tests/common/: mod.rs
tests/reference_gen_code/: simple.txt
tests/resources/: LICENSE.txt
tests/resources/project_files_aurix/: rust-toolchain.toml
tests/resources/project_files_aurix/.cargo/: config.toml
tests/resources/project_files_aurix/linker-scripts/: tc39xB_memory.ld  tc39x_bsp_example_llvm.ld
tests/resources/project_files_aurix/tc162-rt/: Cargo.toml  README.md
tests/resources/project_files_aurix/tc162-rt/.cargo/: config
tests/resources/project_files_aurix/tc162-rt/src/: lib.rs
tests/resources/project_files_cortex_m/: Cargo.toml
tests/resources/project_files_cortex_m/.cargo/: config.toml
tests/resources/project_files_cortex_m/cortex_test/: Cargo.toml  build.rs  memory.x
