[package]
name = "svd2pac"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
categories = ["command-line-utilities", "development-tools::ffi"]
readme = "README.md"
homepage = "tbd"
keywords = ["generator","svd", "pac"]
license = "MIT"
description = "Tool to generate peripheral access crates from SVD files"
publish = false # to be removed before publishing

[dependencies]
anyhow = "1.0.70"
lazy-regex = "3.0"
thiserror = "1.0.40"
svd-parser = { version = "0.14", features = ["derive-from", "expand"] }
tera = "1.19.0"
clap = { version = "4.2.4", features = ["derive", "cargo"] }
log = { version = "0.4.17", features = ["std"] }
env_logger = "0.10.0"
convert_case = "0.6"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
syn = "2.0.33"
linked-hash-map = {version="0.5",features =["serde_impl"]}


[dev-dependencies]
similar = "2.2"
fs_extra = "1.3"
tempfile = "3.6"
toml_edit = "0.19"

[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = 3

[lib]
path = "src/lib.rs" # This just make happy cargo-readme
doctest = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

