[package]
name = "cortex_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arm_example = {path="../arm_example",features=["all","rt"]}
rtic = {version="2.0.1",features=["thumbv7-backend"]}
cortex-m = {version = "*"}
[[bin]]
name = "main"
test = false
bench = false